# ScalableStellarust

./: .gitignore  README.md  ScalableStellarisVisualizer.code-workspace
application/docker_compose/: docker-compose.yml
application/frontend_client/: Dockerfile
application/lib/: Cargo.toml
application/lib/protocol/: Cargo.toml
application/lib/protocol/src/: lib.rs
application/save_data_client/: Cargo.toml
application/services/: Cargo.toml
application/services/extraction_service/: Cargo.toml  Config.toml  Dockerfile
application/services/extraction_service/src/: config.rs  consumer_thread.rs  kafka_message.rs  lib.rs  main.rs  rest_api.rs
application/services/extraction_service/src/kafka/: mod.rs
application/services/extraction_service/src/messaging/: callback.rs  consumer_thread.rs  message.rs  mod.rs
application/services/extraction_service/src/rest_api/: mod.rs
application/services/parsing_service/: Cargo.toml  Config.toml  Dockerfile
application/services/parsing_service/src/: config.rs  main.rs
infrastructure/: README.md  Vagrantfile  archlinux-EFI_VARS.fd  calico.yaml  config.yml  whatever.txt
infrastructure/ansible/: 1_populate_hosts.yml  2_standup_external_loadbalancer.yml  3_satisfy_k8s_prerequisites.yml  4_standup_k8s_cluster.yml  5_test_dns_ok.yml  6_dashboard.yml  deploy.yml  deploy_datacenter.yml  deploy_haproxy.yml  teardown_datacenter.yml
infrastructure/ansible copy/: deploy_datacenter.yml
infrastructure/secure_keys/: generate_certificates.sh
workspace/: ScalableStellarisVisualizer.code-workspace
(+215 files in other folders)
