[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = "0.6"
rdkafka = { version = "0.28.0", features = ["cmake-build"] }